--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -21,8 +21,8 @@
 			<h2>Introduction</h2>
 			
 			<figure>
-					<a href="images/nameofpicture.extensionofpicture">
-						<img src="images/nameofpicture.extensionofpicture" alt = "alternatedescription">
+					<a href="images/funniexdhaha.jpg">
+						<img src="images/funniexdhaha.jpg" alt = "alternatedescription">
 					</a>
 					<figcaption>descriptionofpicture</figcaption>
 			</figure>
