--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -24,7 +24,7 @@
 					<a href="images/funniexdhaha.jpg">
 						<img src="images/funniexdhaha.jpg" alt = "alternatedescription">
 					</a>
-					<figcaption>descriptionofpicture</figcaption>
+					<figcaption>this is a visual representation of my sanity </figcaption>
 			</figure>
 		<ul>
 			<li>Professional Background: Born and raised in NC, worked in fast food, then as a pediatric medical assistant. Now as a contractor for an AI group. I studied at FTCC and now UNCC </li>
