--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -21,8 +21,8 @@
 			<h2>Introduction</h2>
 			
 			<figure>
-					<a href="images/funniexdhaha.jpg">
-						<img src="images/funniexdhaha.jpg" alt = "alternatedescription">
+					<a href="images/funniexdhaha.png">
+						<img src="images/funniexdhaha.png" alt = "sadness">
 					</a>
 					<figcaption>this is a visual representation of my sanity </figcaption>
 			</figure>
