--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -23,7 +23,10 @@
 			
 			<figure>
 					<a href="images/funniexdhaha.png">
-						<img src="images/funniexdhaha.png" alt = "sadness">
+						<img src="images/funniexdhaha.png" alt = "sadness"
+								width="400"
+								height="500"
+								/>
 					</a>
 					<figcaption>this is a visual representation of my sanity </figcaption>
 			</figure>
