--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -28,7 +28,7 @@
 								height="250"
 								/>
 					</a>
-					<figcaption>this is a visual representation of my sanity </figcaption>
+					<figcaption>this is a visual representation of my sanity during covid </figcaption>
 			</figure>
 		<ul>
 			<li>Professional Background: Born and raised in NC, worked in fast food, then as a pediatric medical assistant. Now as a contractor for an AI group. I studied at FTCC and now UNCC </li>
