--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -22,8 +22,8 @@
 			<h2>Introduction</h2>
 			
 			<figure>
-					<a href="images/funniexdhaha.png">
-						<img src="images/funniexdhaha.png" alt = "sadness"
+					<a href="images/thisisfine.png">
+						<img src="images/thisisfine.png" alt = "sadness"
 								width="400"
 								height="250"
 								/>
