--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -3,7 +3,7 @@
 <html land ="en">
 	<head>
 	<meta charset="UTF-8"/>
-	<link href = "styles\default.css" rel ="stylesheet" type="text/css">
+	<link href = "styles/default.css" rel ="stylesheet" type="text/css">
 	
 	<title> Jake Treese, 3135, Pagename</title>		
 	</head>
