--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,1 +1,20 @@
-This is a thing for github stuff and i am your super enthusiastic host, jake
+<!DOCTYPE HTML>
+<main>
+
+<head>
+	<meta charset="UTF-8"/>
+	<link href = "styles/menu.css" rel ="stylesheet" type="text/css">
+	
+	<title> Jake Treese, Menu Page</title>		
+	</head>
+
+<header> <h1> Directory </h1> </header>
+
+
+
+<nav>
+ <a href="https://webpages.uncc.edu/jtreese/itis3135/introduction.html"><div>About Me</div></a>
+ <a href="https://github.com/jtreeseuncc/jtreeseuncc.github.io"><div>Github</div></a>
+</nav>
+
+</main> 
