--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -15,6 +15,8 @@
 <nav>
  <a href="https://webpages.uncc.edu/jtreese/itis3135/introduction.html"><div>About Me</div></a>
  <a href="https://github.com/jtreeseuncc/jtreeseuncc.github.io"><div>Github</div></a>
+ <a href="https://webpages.uncc.edu/jtreese/itis3135/tables.html"><div>Tables Project</div></a>
+<a href="https://webpages.uncc.edu/jtreese/itis3135/forms.html"><div>Forms Project</div></a>
 </nav>
 
 </main> 
