--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -11,8 +11,14 @@
 	<body>
 		
 		
-		<header><h1>Jake Treese >> ITIS 3135</h1></header>
+		<header><h1>Jake Treese --> ITIS 3135</h1>
+		
+		<a href="https://webpages.uncc.edu/jtreese/itis3135/index.html"> Main Menu</a>
+		
+	</header>
+	
 		<nav>
+		
 			<a href="introduction.html>Introduction</a>
 			
 			
@@ -22,7 +28,7 @@
 			<h2>Introduction</h2>
 			
 			<figure>
-					<a href="images/thisisfine.png">
+					<p><a href="images/thisisfine.png"><p>
 						<img src="images/thisisfine.png" alt = "sadness"
 								width="400"
 								height="250"
@@ -55,14 +61,7 @@
 		</main>
 		
 		<footer>
-				<br/>
-				<nav>
-					<a href = "http://webpages.uncc.edu/jtreese" target="_blank"> Charlotte Webpage </a> &#9553;
-					<a href = "https://github.com/jtreeseuncc" target="_blank"> Github </a> &#9553;
-					<a href = "https://github.com/jtreeseuncc/jtreeseuncc.github.io" target="_blank"> Github.io </a> &#9553;
-					<a href = "https://jtreeseuncc.github.io/itis3135/" target="_blank"> Github ITIS 3135 page </a> &#9553;
-				</nav>
-				<br />
+				
 				<p>
 					Page built by Jake(s made up company that makes webpages)
 				</p>
