--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -14,9 +14,18 @@
 
 <nav>
  <a href="https://webpages.uncc.edu/jtreese/itis3135/introduction.html"><div>About Me</div></a>
+ 
  <a href="https://github.com/jtreeseuncc/jtreeseuncc.github.io"><div>Github</div></a>
+ 
  <a href="https://webpages.uncc.edu/jtreese/itis3135/tables.html"><div>Tables Project</div></a>
+ 
 <a href="https://webpages.uncc.edu/jtreese/itis3135/forms.html"><div>Forms Project</div></a>
+
+<a href="https://webpages.uncc.edu/jtreese/itis3135/website_evaluations.html"><div>Website Comparison</div></a>
+
+<a href="https://webpages.uncc.edu/jtreese/itis3135/PROFREMS10N@L FIL3.htm"><div>I am very sorry for this (CRAPPY WEBSITE)</div></a>
+
+<a href="https://webpages.uncc.edu/jtreese/itis3135/brand-jaundiced-tapir.html"><div>Brand: Jaudiced Tapir</div></a>
 </nav>
 
 </main> 
