--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -13,7 +13,7 @@
 		
 		<header><h1>Jake Treese --> ITIS 3135</h1>
 		
-		<a href="https://webpages.uncc.edu/jtreese/itis3135/index.html"> Main Menu</a>
+		<a href="index.html"> Main Menu</a>
 		
 	</header>
 	
