--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -25,7 +25,9 @@
 
 <a href="https://webpages.uncc.edu/jtreese/itis3135/PROFREMS10N@L FIL3.htm"><div>I am very sorry for this (CRAPPY WEBSITE)</div></a>
 
-<a href="https://webpages.uncc.edu/jtreese/itis3135/brand-jaundiced-tapir.html"><div>Brand: Jaudiced Tapir</div></a>
+<a href="https://webpages.uncc.edu/jtreese/itis3135/brand-jaundiced-tapir.html"><div>Brand: Jaundiced Tapir</div></a>
+
+<a href="https://webpages.uncc.edu/jtreese/itis3135/first-scripts.html"><div>First Script Page</div></a>
 </nav>
 
 </main> 
