--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,33 +1,59 @@
 <!DOCTYPE HTML>
 <main>
 
-<head>
-	<meta charset="UTF-8"/>
-	<link href = "styles/menu.css" rel ="stylesheet" type="text/css">
-	
-	<title> Jake Treese, Menu Page</title>		
+	<head>
+		<meta charset="UTF-8"/>
+		<link href = "styles/default.css" rel ="stylesheet" type="text/css">
+		
+		<title> Jake Treese, ITIS 3135 Index Page</title>		
 	</head>
 
-<header> <h1> Directory </h1> </header>
+	<header> <h1> Jake Treese ITIS --> 3135 Index </h1> 
 
 
+	<nav class="headingFont">
+		 <a href="https://webpages.uncc.edu/jtreese/itis3135/introduction.html">About Me</a> &#9829;
+		 
+		 <a href="https://github.com/jtreeseuncc/jtreeseuncc.github.io">Github</a> &#9829;
+		 
+		 <a href="https://webpages.uncc.edu/jtreese/itis3135/tables.html">Tables Project</a> &#9829;
+		 
+		<a href="https://webpages.uncc.edu/jtreese/itis3135/forms.html">Forms Project</a> &#9829;
 
-<nav>
- <a href="https://webpages.uncc.edu/jtreese/itis3135/introduction.html"><div>About Me</div></a>
- 
- <a href="https://github.com/jtreeseuncc/jtreeseuncc.github.io"><div>Github</div></a>
- 
- <a href="https://webpages.uncc.edu/jtreese/itis3135/tables.html"><div>Tables Project</div></a>
- 
-<a href="https://webpages.uncc.edu/jtreese/itis3135/forms.html"><div>Forms Project</div></a>
+		<a href="https://webpages.uncc.edu/jtreese/itis3135/website_evaluations.html">Website Comparison</a> &#9829;
 
-<a href="https://webpages.uncc.edu/jtreese/itis3135/website_evaluations.html"><div>Website Comparison</div></a>
+		<a href="https://webpages.uncc.edu/jtreese/itis3135/stuff/PROFREMS10N@L FIL3.htm">I am very sorry for this (CRAPPY WEBSITE)</a> &#9829;
 
-<a href="https://webpages.uncc.edu/jtreese/itis3135/PROFREMS10N@L FIL3.htm"><div>I am very sorry for this (CRAPPY WEBSITE)</div></a>
+		<a href="https://webpages.uncc.edu/jtreese/itis3135/brand-jaundiced-tapir.html">    Brand: Jaundiced Tapir</a> &#9829;
 
-<a href="https://webpages.uncc.edu/jtreese/itis3135/brand-jaundiced-tapir.html"><div>Brand: Jaundiced Tapir</div></a>
+		<a href="https://webpages.uncc.edu/jtreese/itis3135/first-scripts.html">First Script Page</a> &#9829;
 
-<a href="https://webpages.uncc.edu/jtreese/itis3135/first-scripts.html"><div>First Script Page</div></a>
+		<a href="https://webpages.uncc.edu/jtreese/itis3135/polygonpicker.html">Polygon Picker</a> &#9829;
+
+		<a href="https://webpages.uncc.edu/jtreese/itis3135/calculator_fcc.html">Tutorial Calculator</a> &#9829;
+
+		<a href="https://webpages.uncc.edu/jtreese/itis3135/calculator_try.html">Calculator Try </a>
+
+
 </nav>
 
+
+</header>
+
+
+
+
+<footer>
+		<br>
+		<nav>
+		    <a href="http://webpages.uncc.edu/jtreese/" target="_blank">Charlotte.edu</a> 
+		    <a href="https://github.com/jtreeseuncc" target="_blank">Github</a> 
+		    <a href="https://jtreeseuncc.github.io/" target="_blank">Github.io</a> 
+		    <a href="https://jtreeseuncc.github.io/itis3135/" target="_blank">ITIS 3135 Github Pages</a> 
+		    <a href="https://www.freecodecamp.org/jtreese/" target="_blank">freeCodeCamp</a> 
+		</nav>
+		
+			<p>Page built by Jaundiced Tapir)</p>
+		<br>
+</footer>		
 </main> 
