--- a/itis3135/project/lessons.html
+++ b/itis3135/project/lessons.html
@@ -7,7 +7,9 @@
 		<title>Java Lessons</title>	
 		<link href = "styles/project.css" rel ="stylesheet" type="text/css">
 		<script src="scripts/w3.js"></script>
-		<script src="scripts/jquery-3.6.0.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+		
+		
 	</head>
 
 	<body>
@@ -21,24 +23,10 @@
 		<script>
 			w3.includeHTML();
 		</script>
+		<div w3-include-html="content/lessonsContent.html">
 		
-		<main>
-			<div id="images">
-			<img src="images/david-pupaza-Q9-QEy1_jYI-unsplash.jpg" alt="coding image" width="1600" height="200">
-			</div>
-			
-			<h2> 
-				Lessons
-			</h2>
-			<div id="paragraphText">
-			<p>
-				This is where you'll find all the lessons on different topics or fundamentals you need to know for programming in java. Just select which lesson you want to read through, and get started!
-				(I am still working on getting the content for this page from prof vB).
-			</p>
-			</div>
-		</main>
-		
-		<div  w3-include-html="content/footer.html" id="footingDiv">
+		</div>
+		<div id="footingDiv">
 		<footer>
 		
 		</footer>
